force-app/main/default/objects/Delivery_Issue__mdt/Delivery_Issue__mdt.object-meta.xml
<CustomObject>
    <label>Delivery Issue</label>
    <pluralLabel>Delivery Issues</pluralLabel>
</CustomObject>