force-app/main/default/objects/Delivery_Issue__mdt/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>