force-app/main/default/objects/Delivery_Issue__mdt/fields/Request_Redelivery__c.field-meta.xml
<CustomField>
        <fullName>Request_Redelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Redelivery</label>
        <type>Checkbox</type>
    </CustomField>